--- a/CarRentingSystem/Views/Cars/Add.cshtml
+++ b/CarRentingSystem/Views/Cars/Add.cshtml
@@ -3,53 +3,48 @@
 @{
     ViewData["Title"] = "Add Car";
 }
+<div class="row">
+    <div class="offset-md-3 col-md-6 col-sm-12">
+        <h2 class="heading-margin text-center">Add Car</h2>
 
-<form method="post">
-  <div class="form-group">
-    <label asp-for="Brand"></label>
-    <input asp-for="Brand" class="form-control" placeholder="BMW, Audi, etc...">
-  </div>
-  <div class="form-group">
-    <label asp-for="Model"></label>
-    <input asp-for="Model" class="form-control" placeholder="F10, A8, etc...">
-  </div>
-  <div class="form-group">
-    <label asp-for="Description"></label>
-    <textarea asp-for="Description" class="form-control" placeholder="Some details..."></textarea>
-  </div>
-  <div class="form-group">
-    <label asp-for="ImageUrl"></label>
-    <input asp-for="ImageUrl" class="form-control" placeholder="The image URL of the car...">
-  </div>
-  <div class="form-group">
-    <label asp-for="Year"></label>
-    <input asp-for="Year" class="form-control" placeholder=@DateTime.UtcNow.Year>
-  </div>
+        <form method="post">
+            <div class="form-group">
+                <label asp-for="Brand"></label>
+                <input asp-for="Brand" class="form-control" placeholder="BMW, Audi, etc...">
+                <span asp-validation-for="Brand" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Model"></label>
+                <input asp-for="Model" class="form-control" placeholder="F10, A8, etc...">
+                <span asp-validation-for="Model" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description"></label>
+                <textarea asp-for="Description" class="form-control" placeholder="Some details..."></textarea>
+                <span asp-validation-for="Description" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageUrl"></label>
+                <input asp-for="ImageUrl" class="form-control" placeholder="The image URL of the car...">
+                <span asp-validation-for="ImageUrl" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Year"></label>
+                <input asp-for="Year" class="form-control" placeholder=@DateTime.UtcNow.Year>
+                <span asp-validation-for="Year" class="small text-danger"></span>
 
+            </div>
+            <div class="form-group">
+                <label asp-for="CategoryId"></label>
+                <select asp-for="CategoryId" class="form-control">
+                    @foreach (var category in Model.Categories)
+                    {
+                        <option value="@category.Id">@category.Name</option>
+                    }
+                </select>
+            </div>
 
-
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Example select</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect2">Example multiple select</label>
-    <select multiple class="form-control" id="exampleFormControlSelect2">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-</form>
+            <input class="btn btn-primary" type="submit" value="Save">
+        </form>
+    </div>
+</div>
